k8s/istio-ingress/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: noop-demo
# namespace: noop
spec:
  gateways:
  - istio-system/ingress-gateway
  hosts:
  - 'demo.noop.ga'
  http:
  - match:
    - uri:
        prefix: /demo/total
    route:
    - destination:
        host: app
        port:
          number: 8080
  - route:
    - destination:
        host: web
        port:
          number: 2015
